--- a/Firebase.CrashReporting/source/Firebase.CrashReporting/Firebase.CrashReporting.targets
+++ b/Firebase.CrashReporting/source/Firebase.CrashReporting/Firebase.CrashReporting.targets
@@ -3,12 +3,20 @@
 	<PropertyGroup>
 		<_FirebaseCrashReportingAssemblyName>Firebase.CrashReporting, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseCrashReportingAssemblyName>
 		<_FirebaseCrashReportingItemsFolder>FCrshR-1.1.4</_FirebaseCrashReportingItemsFolder>
+		<_FirebaseCrashReportingScriptsMasterAfterTargets>_XamarinBuildDownloadMasterTarget</_FirebaseCrashReportingScriptsMasterAfterTargets>
+		<_FirebaseCrashReportingScriptsMasterDependsOnTargets>_FirebaseCrashReportingCreateScriptsDirectory;_FirebaseCrashReportingCopyScripts</_FirebaseCrashReportingScriptsMasterDependsOnTargets>
+		<_FirebaseCrashReportingScriptsFolder>scripts/FirebaseCrashReporting/</_FirebaseCrashReportingScriptsFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseCrashReportingItemsFolder)">
 			<Url>https://dl.google.com/dl/cpdc/3802e848f39facac/FirebaseCrash-1.1.4.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
+		<XamarinBuildCopyResources 
+				Include="$(XamarinBuildDownloadDir)$(_FirebaseCrashReportingItemsFolder)/*"
+				Exclude="$(XamarinBuildDownloadDir)$(_FirebaseCrashReportingItemsFolder)/README.md;
+					$(XamarinBuildDownloadDir)$(_FirebaseCrashReportingItemsFolder)/upload-sym;
+					$(XamarinBuildDownloadDir)$(_FirebaseCrashReportingItemsFolder)/upload-sym.sh;"/>
 		<XamarinBuildRestoreResources Include="_FirebaseCrashReportingItems" />
 	</ItemGroup>
 	<Target Name="_FirebaseCrashReportingItems">
@@ -25,4 +33,16 @@
 		</ItemGroup>
 
 	</Target>
+	<Target Name="_FirebaseCrashReportingScriptsMasterTarget"
+			Condition="'$(_FirebaseCrashReportingScriptsMasterDependsOnTargets)'!=''"
+			AfterTargets="$(_FirebaseCrashReportingScriptsMasterAfterTargets)"
+			DependsOnTargets="$(_FirebaseCrashReportingScriptsMasterDependsOnTargets)" />
+	<Target Name="_FirebaseCrashReportingCreateScriptsDirectory" Condition="!Exists('$(ProjectDir)$(_FirebaseCrashReportingScriptsFolder)')">  
+		<Message Text="Creating scripts folder at $(ProjectDir)" />
+		<MakeDir Directories="$(ProjectDir)scripts/FirebaseCrashReporting/" />
+    </Target>
+	<Target Name="_FirebaseCrashReportingCopyScripts">  
+		<Message Text="Copying files to $(ProjectDir)$(_FirebaseCrashReportingScriptsFolder)" />
+		<Copy SourceFiles="@(XamarinBuildCopyResources)" DestinationFolder="$(ProjectDir)$(_FirebaseCrashReportingScriptsFolder)" />  
+    </Target>
 </Project>
