--- a/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.targets
+++ b/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.targets
@@ -2,18 +2,18 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_GoogleMobileAdsAssemblyName>Google.MobileAds, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleMobileAdsAssemblyName>
-		<_GoogleMobileAdsId>Gmbladssdk-7.15.0</_GoogleMobileAdsId>
+		<_GoogleMobileAdsId>Gmbladssdk-7.16.0</_GoogleMobileAdsId>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildRestoreResources Include="_GoogleMobileAdsItems" />
 		<XamarinBuildDownload Include="$(_GoogleMobileAdsId)">
-			<Url>https://dl.google.com/dl/cpdc/7d719f8d49d44418-Google-Mobile-Ads-SDK-7.15.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/a396dfc4a737166b/Google-Mobile-Ads-SDK-7.16.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 	</ItemGroup>
 	<Target Name="_GoogleMobileAdsItems">
 		<PropertyGroup>
-			<_GoogleMobileAdsFrameworkDir>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsId)\Frameworks\GoogleMobileAds.framework</_GoogleMobileAdsFrameworkDir>
+			<_GoogleMobileAdsFrameworkDir>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsId)\Frameworks\frameworks\GoogleMobileAds.framework</_GoogleMobileAdsFrameworkDir>
 		</PropertyGroup>
 		<ItemGroup>
 			<RestoreAssemblyResource Include="$(_GoogleMobileAdsFrameworkDir)\Versions\A\GoogleMobileAds">
