[google][tagmanager] Updated to version 5.0.8 - Fixed missing symbols - Added code to sample to test preview containers of Tag Manager - This fix issues #60 and #61

--- a/Google.TagManager/samples/TagManagerSample/TagManagerSample/Info.plist
+++ b/Google.TagManager/samples/TagManagerSample/TagManagerSample/Info.plist
@@ -34,7 +34,14 @@
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>CFBundleURLTypes</key>
 	<array>
-		<dict/>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.xamarin.google.ios.tagmanagersample</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>tagmanager.c.com.xamarin.google.ios.tagmanagersample</string>
+			</array>
+		</dict>
 	</array>
 </dict>
 </plist>
