--- a/Google.TagManager/source/Google.TagManager/Google.TagManager.targets
+++ b/Google.TagManager/source/Google.TagManager/Google.TagManager.targets
@@ -3,12 +3,22 @@
 
 	<PropertyGroup>
 		<_GoogleTagManagerAssemblyName>Google.TagManager, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleTagManagerAssemblyName>
-		<_GoogleTagManagerItemsFolder>GTagM-5.0.6</_GoogleTagManagerItemsFolder>
+		<_GoogleTagManagerItemsFolder>GTagM-5.0.8</_GoogleTagManagerItemsFolder>
+		<_GoogleUtilitiesItemsFolder>GUtlts-1.3.2</_GoogleUtilitiesItemsFolder>
+		<_GoogleSymbolUtilitiesItemsFolder>GSmblU-1.1.2</_GoogleSymbolUtilitiesItemsFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleTagManagerItemsFolder)">
-			<Url>https://www.gstatic.com/cpdc/0a0d06d2083b5ef9-GoogleTagManager-5.0.6.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/0a0d06d2083b5ef9-GoogleTagManager-5.0.8.tar.gz</Url>
+			<Kind>Tgz</Kind>
+		</XamarinBuildDownload>
+		<XamarinBuildDownload Include="$(_GoogleUtilitiesItemsFolder)">
+			<Url>https://dl.google.com/dl/cpdc/978f81964b50a7c0/GoogleUtilities-1.3.2.tar.gz</Url>
+			<Kind>Tgz</Kind>
+		</XamarinBuildDownload>
+		<XamarinBuildDownload Include="$(_GoogleSymbolUtilitiesItemsFolder)">
+			<Url>https://dl.google.com/dl/cpdc/7ecdffda6fbef4af/GoogleSymbolUtilities-1.1.2.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_GoogleTagManagerItems"/>
@@ -18,6 +28,8 @@
 
 		<PropertyGroup>
 			<_GoogleTagManagerSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleTagManagerItemsFolder)\Frameworks\</_GoogleTagManagerSDKBaseFolder>
+			<_GoogleUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleUtilitiesItemsFolder)\Frameworks\frameworks\</_GoogleUtilitiesSDKBaseFolder>
+			<_GoogleSymbolUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleSymbolUtilitiesItemsFolder)\Frameworks\frameworks\</_GoogleSymbolUtilitiesSDKBaseFolder>
 		</PropertyGroup>
 
 		<ItemGroup>
@@ -27,6 +39,14 @@
 			</RestoreAssemblyResource>
 			<RestoreAssemblyResource Include="$(_GoogleTagManagerSDKBaseFolder)GoogleTagManager.framework\Resources\TagManagerResources.bundle\TAGRuntime.js.dat">
 				<LogicalName>__monotouch_content_TagManagerResources.bundle_fTAGRuntime.js.dat</LogicalName>
+				<AssemblyName>$(_GoogleTagManagerAssemblyName)</AssemblyName>
+			</RestoreAssemblyResource>
+			<RestoreAssemblyResource Include="$(_GoogleUtilitiesSDKBaseFolder)GoogleUtilities.framework\GoogleUtilities">
+				<LogicalName>GoogleUtilities</LogicalName>
+				<AssemblyName>$(_GoogleTagManagerAssemblyName)</AssemblyName>
+			</RestoreAssemblyResource>
+			<RestoreAssemblyResource Include="$(_GoogleSymbolUtilitiesSDKBaseFolder)GoogleSymbolUtilities.framework\GoogleSymbolUtilities">
+				<LogicalName>GoogleSymbolUtilities</LogicalName>
 				<AssemblyName>$(_GoogleTagManagerAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
 		</ItemGroup>
