--- a/Firebase.CrashReporting/samples/CrashReportingSample/CrashReportingSample/CrashReportingSample.csproj
+++ b/Firebase.CrashReporting/samples/CrashReportingSample/CrashReportingSample/CrashReportingSample.csproj
@@ -95,6 +95,14 @@
     <MtouchTlsProvider>Default</MtouchTlsProvider>
     <PlatformTarget>x86</PlatformTarget>
     <MtouchNoSymbolStrip>false</MtouchNoSymbolStrip>
+    <CustomCommands>
+      <CustomCommands>
+        <Command>
+          <type>AfterBuild</type>
+          <command>sh ${ProjectDir}/scripts/FirebaseCrashReporting/batch-upload -p ${ProjectDir}/GoogleService-Info.plist -i ${ProjectDir}/Info.plist ${ProjectDir}/service-account.json ${TargetDir}/${ProjectName}.app/${ProjectName}</command>
+        </Command>
+      </CustomCommands>
+    </CustomCommands>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
