[google][signin] Updated docs and sample

--- a/Google.SignIn/samples/SignInExample/SignInExample/Info.plist
+++ b/Google.SignIn/samples/SignInExample/SignInExample/Info.plist
@@ -51,5 +51,7 @@
 	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>CFBundleName</key>
+	<string>SignInExample</string>
 </dict>
 </plist>
