--- a/Firebase.Analytics/nuget/Xamarin.Firebase.iOS.Analytics.nuspec
+++ b/Firebase.Analytics/nuget/Xamarin.Firebase.iOS.Analytics.nuspec
@@ -13,9 +13,11 @@
     <licenseUrl>https://components.xamarin.com/license/firebaseiosanalytics</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosanalytics_128x128.png</iconUrl>
     <dependencies>
-      <dependency id="Xamarin.Build.Download" version="0.4.3"/>
-      <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1"/>
-      <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.6.0"/>
+      <group targetFramework="Xamarin.iOS10">
+        <dependency id="Xamarin.Build.Download" version="0.4.3"/>
+        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1"/>
+        <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.6.0"/>
+      </group>
     </dependencies>
   </metadata>
   <files>
