--- a/Firebase.CrashReporting/nuget/Xamarin.Firebase.iOS.CrashReporting.nuspec
+++ b/Firebase.CrashReporting/nuget/Xamarin.Firebase.iOS.CrashReporting.nuspec
@@ -13,9 +13,11 @@
     <licenseUrl>https://components.xamarin.com/license/firebaseioscrashreporting</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseioscrashreporting_128x128.png</iconUrl>
     <dependencies>
-      <dependency id="Xamarin.Build.Download" version="0.4.3"/>
-      <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.6.0.2"/>
-      <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1"/>
+      <group targetFramework="Xamarin.iOS10">
+        <dependency id="Xamarin.Build.Download" version="0.4.3"/>
+        <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.6.0.2"/>
+        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1"/>
+      </group>
     </dependencies>
   </metadata>
   <files>
