--- a/Firebase.Invites/nuget/Xamarin.Firebase.iOS.Invites.nuspec
+++ b/Firebase.Invites/nuget/Xamarin.Firebase.iOS.Invites.nuspec
@@ -13,9 +13,11 @@
     <licenseUrl>https://components.xamarin.com/license/firebaseiosinvites</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosinvites_128x128.png</iconUrl>
     <dependencies>
-      <dependency id="Xamarin.Build.Download" version="0.4.3"/>
-      <dependency id="Xamarin.Firebase.iOS.DynamicLinks" version="1.3.2.2"/>
-      <dependency id="Xamarin.Google.iOS.SignIn" version="4.0.1.2"/>
+      <group targetFramework="Xamarin.iOS10">
+        <dependency id="Xamarin.Build.Download" version="0.4.3"/>
+        <dependency id="Xamarin.Firebase.iOS.DynamicLinks" version="1.3.2.2"/>
+        <dependency id="Xamarin.Google.iOS.SignIn" version="4.0.1.2"/>
+      </group>
     </dependencies>
   </metadata>
   <files>
