--- a/Firebase.Invites/nuget/Xamarin.Firebase.iOS.Invites.nuspec
+++ b/Firebase.Invites/nuget/Xamarin.Firebase.iOS.Invites.nuspec
@@ -15,8 +15,12 @@
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
         <dependency id="Xamarin.Build.Download" version="0.4.3"/>
-        <dependency id="Xamarin.Firebase.iOS.DynamicLinks" version="1.3.2.2"/>
         <dependency id="Xamarin.Google.iOS.SignIn" version="4.0.1.2"/>
+        <dependency id="Xamarin.Google.iOS.Core" version="3.0.3.3"/>
+        <dependency id="Xamarin.Firebase.iOS.DynamicLinks" version="1.3.2.2"/>
+        <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.6.0.2"/>
+        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1"/>
+        <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.6.0"/>
       </group>
     </dependencies>
   </metadata>
