--- a/Google.SignIn/nuget/Xamarin.Google.iOS.SignIn.nuspec
+++ b/Google.SignIn/nuget/Xamarin.Google.iOS.SignIn.nuspec
@@ -16,6 +16,9 @@
       <group targetFramework="Xamarin.iOS10">
         <dependency id="Xamarin.Build.Download" version="0.4.3"/>
         <dependency id="Xamarin.Google.iOS.Core" version="3.0.3.3"/>
+        <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.6.0.2"/>
+        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1"/>
+        <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.6.0"/>
       </group>
     </dependencies>
   </metadata>
